# alluris-tools

./: .gitignore  Makefile.am  README.md  annotated.html  bootstrap  bootstrap_mac  classes.html  configure.ac  dir_37334639afee859b82b76b573b63d19d.html  dir_37334639afee859b82b76b573b63d19d_dep.map  dir_37334639afee859b82b76b573b63d19d_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  graph_legend.html  index.html  liballuris_8c.html  liballuris_8c__incl.map  liballuris_8c__incl.md5  liballuris_8h.html  liballuris_8h__dep__incl.map  liballuris_8h__dep__incl.md5  liballuris_8h__incl.map  liballuris_8h__incl.md5  liballuris_8h_source.html  structalluris__device__description.html  structliballuris__state.html  union____liballuris__state____.html  union____liballuris__state______coll__graph.map  union____liballuris__state______coll__graph.md5
cli/: Makefile.am  gadc.c  gadc_getopt.c
dev/: Makefile  README  aspell.en.pws
doc/: .gitignore  Doxyfile  Doxyfile.in  Makefile  Makefile.am
examples/: CapValues.ods  Makefile.am  fstream.c  fstream_recv.grc  fstream_serv.m  gadc.m  multi_FMI.c
liballuris/: Makefile.am  liballuris.c  liballuris.h
search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  classes_0.js  classes_2.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  pages_0.js  search.js  variables_0.js  variables_1.js  variables_2.js  variables_5.js  variables_6.js  variables_8.js  variables_9.js
src/: .gitignore  Makefile  Makefile.mac  gadc.c  liballuris.c  liballuris.h
test/: KNOWN_ISSUES  Makefile  README  gadc_autostop.bats  gadc_digits.bats  gadc_digout.bats  gadc_keypress.bats  gadc_limits.bats  gadc_mem_capture.bats  gadc_mem_mode.bats  gadc_mode.bats  gadc_peaks.bats  gadc_state.bats  gadc_unit.bats  gadc_valgrind.sh  gadc_various.bats  liballuris_test.sh  test_gadc.bats  test_gadc_digout.bats  test_gadc_error.bats  test_gadc_success.bats  (+2 more)
